<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:background="@color/blue" >

        <ImageButton
            android:id="@+id/settings_back"
            android:layout_width="50dip"
            android:layout_height="40dip"
            android:background="@color/blue"
            android:gravity="right"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dip"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <!-- 最外围的 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/light_grey"
        android:orientation="vertical" >

        <!-- 第一部分：功能设置 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="290dip"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/normal_shape"
            android:orientation="vertical" >

            <!-- 第一栏 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="10dip"
                    android:text="@string/support_javascript"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/settings_set_javascript_toggle_btn"
                    android:layout_width="50dip"
                    android:layout_height="30dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>

            <!-- 第二栏 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="10dip"
                    android:text="@string/support_zoom"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/settings_set_zoom_toggle_btn"
                    android:layout_width="50dip"
                    android:layout_height="30dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>

            <!-- 第三栏 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="10dip"
                    android:text="@string/support_picture"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/settings_set_picture_toggle_btn"
                    android:layout_width="50dip"
                    android:layout_height="30dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>
            <!-- part 4 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="10dip"
                    android:text="@string/support_cache"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/settings_set_cache_toggle_btn"
                    android:layout_width="50dip"
                    android:layout_height="30dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>
            <!-- part 5 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="10dip"
                    android:text="@string/support_cookie"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/settings_set_cookie_toggle_btn"
                    android:layout_width="50dip"
                    android:layout_height="30dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>
            <!-- part 6 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="10dip"
                    android:text="@string/without_history"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/settings_set_without_history_toggle_btn"
                    android:layout_width="50dip"
                    android:layout_height="30dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:background="@drawable/selector_butn_toggle"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>
            <!-- part 7 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="200dip"
                    android:layout_height="40dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="10dip"
                    android:text="@string/choose_search_engine"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/settings_choose_search_engine"
                    android:layout_width="100dip"
                    android:layout_height="40dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="2dip" />
            </FrameLayout>
            <!-- 等等。。。 -->
        </LinearLayout>

        <!-- 第二部分 界面設置 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/normal_shape"
            android:orientation="vertical" >

            <!-- 第一栏 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="30dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="6dip"
                    android:text="@string/change_saveDirectory"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/change_directory"
                    android:layout_width="50dip"
                    android:layout_height="30dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:gravity="center_vertical|center_horizontal|fill"
                    android:text="@string/change"
                    android:textSize="12sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>

            <!-- part 2 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="left"
                    android:padding="10dip"
                    android:src="@drawable/tab_settings" />

                <TextView
                    android:layout_width="170dp"
                    android:layout_height="35dip"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dip"
                    android:gravity="left"
                    android:paddingTop="6dip"
                    android:text="@string/clear_data"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/clear_data"
                    android:layout_width="50dip"
                    android:layout_height="35dip"
                    android:layout_gravity="right"
                    android:layout_marginRight="6dip"
                    android:layout_marginTop="6dip"
                    android:gravity="center_vertical|center_horizontal|fill"
                    android:text="@string/wipe"
                    android:textSize="12sp" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" >
            </LinearLayout>

            <!-- 第三栏 -->
            <!-- 等等。。。 -->

        </LinearLayout>
    </LinearLayout>

</LinearLayout>